--- a/src/pages/CalcPage/Calc.module.scss
+++ b/src/pages/CalcPage/Calc.module.scss
@@ -1,120 +1,119 @@
 @import '../../styles/Variables.scss';
 
 h1 {
-  text-align: center;
-  background: $liner-gradient;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: $text-shadow;
-  margin-top: 4svh;
+	text-align: center;
+	background: $liner-gradient;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	text-shadow: $text-shadow;
+	margin-top: 4svh;
 }
 .SCalc {
-  height: 100%;
-  padding: $index calc($index * 3);
-  margin-bottom: calc($index * 2);
-  display: flex;
-  gap: calc($index * 3);
-  color: $accent-color-2;
+	height: 100%;
+	padding: $index calc($index * 3);
+	margin-bottom: calc($index * 2);
+	display: flex;
+	gap: calc($index * 3);
+	color: $accent-color-2;
 }
 .calculator {
-  width: 50svw;
-  height: 50svh;
-  padding: calc($index * 1.5);
-  border-radius: $index;
-  box-shadow: inset 0 0 20px black;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+	width: 50svw;
+	height: 50svh;
+	padding: calc($index * 1.5);
+	border-radius: $index;
+	box-shadow: inset 0 0 20px black;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 }
 .formFloor {
-  width: 30svw;
-  display: flex;
-  justify-content: space-between;
+	width: 30svw;
+	display: flex;
+	justify-content: space-between;
 }
-.inputFloor input[type=radio] {
-  display: none;
+.inputFloor input[type='radio'] {
+	display: none;
 }
 .inputFloor label {
 	display: inline-block;
 	padding: calc($index * 0.3) calc($index * 0.5);
 	line-height: $index;
 	border: 1px solid $grey-color;
-  color: $grey-color;
+	color: $grey-color;
 	border-radius: $index;
 	cursor: pointer;
 	user-select: none;
-  transition: $button-transition;
+	transition: $button-transition;
 }
 .inputFloor label:hover {
-  color: $title-color;
-  border-color: $title-color;
-  box-shadow: 0 0 6px $title-color;
+	color: $title-color;
+	border-color: $title-color;
+	box-shadow: 0 0 6px $title-color;
 }
-.inputFloor input[type=radio]:checked + label {
+.inputFloor input[type='radio']:checked + label {
 	border-color: $accent-color-2;
-  color: $accent-color-2;
-  box-shadow: 0 0 6px $accent-color-2;
-  user-select: none;
-  pointer-events: none;
+	color: $accent-color-2;
+	box-shadow: 0 0 6px $accent-color-2;
+	user-select: none;
+	pointer-events: none;
 }
 .formIn {
-  display: flex;
-  label {
-    margin-right: calc($index * 0.5);
-  }
+	display: flex;
+	label {
+		margin-right: calc($index * 0.5);
+	}
 }
 .inputIn {
-  padding-inline: $index;
-  &:nth-child(2) {
-    border-left: 1px solid $grey-color;
-    border-right: 1px solid $grey-color;
-  }
+	padding-inline: $index;
+	&:nth-child(2) {
+		border-left: 1px solid $grey-color;
+		border-right: 1px solid $grey-color;
+	}
 }
 .inputNumber {
-  background: transparent;
-  outline: none;
-  appearance: textfield;
-  -webkit-appearance: textfield;
-  width: 5svw;
-  height: calc($index * 1.6);
-  padding: calc($index * 0.5);
-  border: 1px solid $grey-color;
-  border-radius: $index;
-  color: white;
-  font-size: calc($index * 0.8);
-  transition: $button-transition;
+	background: transparent;
+	outline: none;
+	appearance: textfield;
+	-webkit-appearance: textfield;
+	width: 5svw;
+	height: calc($index * 1.6);
+	padding: calc($index * 0.5);
+	border: 1px solid $grey-color;
+	border-radius: $index;
+	color: white;
+	font-size: calc($index * 0.8);
+	transition: $button-transition;
 }
 .inputNumber:focus {
-  border-color: $title-color;
-  box-shadow: 0 0 10px $title-color;
+	border-color: $title-color;
+	box-shadow: 0 0 10px $title-color;
 }
 .submitCalcButton {
-  outline: none;
-  border: none;
-  padding: calc($index * 0.4) calc($index * 0.5);
-  border-radius: $index;
-  user-select: none;
-  border: 1px solid transparent;
-  background-color: $title-color;
-  color: $main-color;
-  font-size: calc($index * 0.7);
-  font-weight: 500;
-  text-align: center;
-  transition: $button-transition;
-  &:hover {
-    border-color: $title-color;
-    background-color: transparent;
-    color: $title-color;
-  }
+	outline: none;
+	border: none;
+	padding: calc($index * 0.4) calc($index * 0.5);
+	border-radius: $index;
+	user-select: none;
+	border: 1px solid transparent;
+	background-color: $title-color;
+	color: $main-color;
+	font-size: calc($index * 0.7);
+	font-weight: 500;
+	text-align: center;
+	transition: $button-transition;
+	&:hover {
+		border-color: $title-color;
+		background-color: transparent;
+		color: $title-color;
+	}
 }
 .result {
-  color: $title-color;
-  font-size: $index;
-  span {
-    font-size: calc($index * 1.5);
-    color: $accent-color-2;
-  }
+	color: $title-color;
+	font-size: $index;
+	span {
+		font-size: calc($index * 1.5);
+		color: $accent-color-2;
+	}
 }
-
