--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,126 +1,126 @@
-@import-normalize;
 @import './Variables.scss';
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
-html, body {
-  overflow-x: hidden;
+html,
+body {
+	overflow-x: hidden;
 }
 body {
-  width: $main-width;
-  height: 100%;
-  min-height: 100svh;
-  background-color: $main-color;
-  color: $text-color;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: normal;
-  line-height: 1.25;
-  font-size: calc($index * 0.8);
+	width: $main-width;
+	height: 100%;
+	min-height: 100svh;
+	background-color: $main-color;
+	color: $text-color;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-weight: normal;
+	line-height: 1.25;
+	font-size: calc($index * 0.8);
 }
 ul {
-  list-style: none;
+	list-style: none;
 }
 a {
-  text-decoration: none;
-  color: $text-color;
+	text-decoration: none;
+	color: $text-color;
 }
 .Header {
-  width: $main-width;
-  height: 8svh;
-  display: block;
-  top: 0;
-  position: fixed;
-  z-index: 100;
-  background-color: rgba($main-color, 0.8);
-  border-bottom: 1px solid $title-color;
+	width: $main-width;
+	height: 8svh;
+	display: block;
+	top: 0;
+	position: fixed;
+	z-index: 100;
+	background-color: rgba($main-color, 0.8);
+	border-bottom: 1px solid $title-color;
 }
 .Header__content {
-  width: 80svw;
-  height: inherit;
-  margin-inline: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  .logo {
-    background: $liner-gradient;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  .navPage__ul {
-    display: flex;
-    gap: calc($index * 0.5);
-  }
+	width: 80svw;
+	height: inherit;
+	margin-inline: auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	.logo {
+		background: $liner-gradient;
+		background-clip: text;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+	.navPage__ul {
+		display: flex;
+		gap: calc($index * 0.5);
+	}
 }
 .navPage__ul li {
-  transition: $button-transition;
-  a {
-    font-weight: 400;
-    user-select: none;
-    transition: $button-transition;
-    p {
-      color: $grey-color;
-      padding: 4px 12px;
-      border-bottom: 1px solid transparent;
-      transition: inherit;
-    }
-  }
-  &:hover a p {
-    color: white;
-    }
-  .active {
-    user-select: none;
-    cursor: default;
-    p {
-      color: white;
-      border-color: $title-color;
-    }
-  }
+	transition: $button-transition;
+	a {
+		font-weight: 400;
+		user-select: none;
+		transition: $button-transition;
+		p {
+			color: $grey-color;
+			padding: 4px 12px;
+			border-bottom: 1px solid transparent;
+			transition: inherit;
+		}
+	}
+	&:hover a p {
+		color: white;
+	}
+	.active {
+		user-select: none;
+		cursor: default;
+		p {
+			color: white;
+			border-color: $title-color;
+		}
+	}
 }
 main {
-  width: $main-width;
-  min-height: calc(100svh - (9svh + 8svh));
-  margin-top: 8svh;
-  display: flex;
-  flex-direction: column;
-  gap: calc($index * 4.4);
-  section {
-    width: inherit;
-  }
+	width: $main-width;
+	min-height: calc(100svh - (9svh + 8svh));
+	margin-top: 8svh;
+	display: flex;
+	flex-direction: column;
+	gap: calc($index * 4.4);
+	section {
+		width: inherit;
+	}
 }
 .button-container {
-  outline: none;
-  border: none;
-  width: calc($index * 5.5);
-  height: calc($index * 1.6);
-  border-radius: $index;
-  user-select: none;
-  .button {
-    all: inherit;
-    border: 1px solid transparent;
-    background-color: $title-color;
-    color: $main-color;
-    font-size: calc($index * 0.7);
-    text-align: center;
-    transition: $button-transition;
-    &:hover {
-      border-color: $title-color;
-      background-color: transparent;
-      color: $title-color;
-    }
-  }
+	outline: none;
+	border: none;
+	width: calc($index * 5.5);
+	height: calc($index * 1.6);
+	border-radius: $index;
+	user-select: none;
+	.button {
+		all: inherit;
+		border: 1px solid transparent;
+		background-color: $title-color;
+		color: $main-color;
+		font-size: calc($index * 0.7);
+		text-align: center;
+		transition: $button-transition;
+		&:hover {
+			border-color: $title-color;
+			background-color: transparent;
+			color: $title-color;
+		}
+	}
 }
 .Footer {
-  width: inherit;
-  min-height: 9svh;
-  padding: $index;
-  background: $liner-gradient;
-  text-align: center;
-  color: $main-color;
+	width: inherit;
+	min-height: 9svh;
+	padding: $index;
+	background: $liner-gradient;
+	text-align: center;
+	color: $main-color;
 }
