--- a/src/Components/SInfoContent/SInfoContent.module.scss
+++ b/src/Components/SInfoContent/SInfoContent.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/Variables.scss';
 
 .wrapper {
+	background-image: url('../../../public/img/image/гири.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
