--- a/src/pages/MeditationPage/Meditation.module.scss
+++ b/src/pages/MeditationPage/Meditation.module.scss
@@ -1,1 +1,58 @@
 @import '../../styles/Variables.scss';
+
+.wrapper {
+  height: 100%;
+  padding: $index calc($index * 4);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  h1 {
+    margin: 0;
+  }
+}
+.timerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: $index;
+  padding: calc($index * 2);
+  border-radius: $index;
+  box-shadow: inset 0 0 20px black;
+  .timer {
+    font-size: calc($index * 5);
+    color: $title-color;
+  }
+  .controls {
+    display: flex;
+    gap: $index;
+  }
+}
+.button {
+  outline: none;
+  border: none;
+  padding: calc($index * 0.3) calc($index * 0.5);
+  border-radius: $index;
+  user-select: none;
+  border: 1px solid transparent;
+  background-color: $title-color;
+  color: $main-color;
+  font-size: calc($index * 0.7);
+  text-align: center;
+  transition: $button-transition;
+  &:hover {
+    border-color: $title-color;
+    background-color: transparent;
+    color: $title-color;
+  }
+  &:disabled {
+    background-color: $grey-color;
+    pointer-events: none;
+  }
+}
+input[type=number].inputTime {
+  width: 7svw;
+}
+.playerContainer {
+  border-radius: $index;
+}
