--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -1,13 +1,16 @@
 $index: calc(1vw + 1vh);
 $main-width: 100svw;
-$main-color: #292c33;
-$accent-color-1: #e9494f;
-$accent-color-2: #f7a173;
-$title-color: #32a997;
+$main-color: #292C33;
+$accent-color-1: #E9494F;
+$accent-color-2: #F7A173;
+$title-color: #32A997;
 $grey-color: #c0c0c0c0;
-$liner-gradient: linear-gradient(45deg, $accent-color-1, $accent-color-2);
+$liner-gradient: linear-gradient(
+  45deg, 
+  $accent-color-1,
+  $accent-color-2);
 $text-color: #ccc;
 $button-transition: 0.2s;
 $main-transition: 0.3s;
-$box-shadow: 0 0.8em 1.2em rgba(black, 0.5);
-$text-shadow: 0.1em 0.1em 0.5em rgba(black, 0.4);
+$box-shadow: 0 .8em 1.2em rgba(black, 0.5);
+$text-shadow: .1em .1em .5em rgba(black, 0.4);
