--- a/src/Components/SInfoContent/SInfoContent.module.scss
+++ b/src/Components/SInfoContent/SInfoContent.module.scss
@@ -1,54 +1,53 @@
 @import '../../styles/Variables.scss';
 
 .wrapper {
-  background-image: url('../../img/image/гири.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  display: grid;
-  place-items: center;
-  padding: calc($index * 3);
-  padding-top: 0;
-  border-top-left-radius: $index;
-  border-top-right-radius: $index;
-  box-shadow: inset 0 0 20px black;
-  .container {
-    width: 80svw;
-    display: flex;
-    flex-direction: column;
-    .containerItemOne {
-      padding-top: calc($index * 3);
-      display: flex;
-      flex-direction: row;
-    }
-    .containerItemTwo {
-      padding-top: calc($index * 3);
-      display: flex;
-      flex-direction: row-reverse;
-    }
-  }
+	background-image: url('../../../public/img/image/gantels.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	display: grid;
+	place-items: center;
+	padding: calc($index * 3);
+	padding-top: 0;
+	border-top-left-radius: $index;
+	border-top-right-radius: $index;
+	box-shadow: inset 0 0 20px black;
+	.container {
+		width: 80svw;
+		display: flex;
+		flex-direction: column;
+		.containerItemOne {
+			padding-top: calc($index * 3);
+			display: flex;
+			flex-direction: row;
+		}
+		.containerItemTwo {
+			padding-top: calc($index * 3);
+			display: flex;
+			flex-direction: row-reverse;
+		}
+	}
 }
 .contentItem {
-  max-width: 33svw;
-  padding: $index;
-  background-color: $main-color;
-  box-shadow: $box-shadow;
-  text-shadow: $text-shadow;
-  border-radius: $index;
-  h3 {
-    text-align: center;
-    color: $accent-color-2
-  }
-  h2 {
-    text-align: center;
-    color: $title-color;
-  }
-  div {
-    border-top: 1px solid $title-color;
-    padding-top: $index;
-    display: flex;
-    justify-content: center;
-  }
+	max-width: 33svw;
+	padding: $index;
+	background-color: $main-color;
+	box-shadow: $box-shadow;
+	text-shadow: $text-shadow;
+	border-radius: $index;
+	h3 {
+		text-align: center;
+		color: $accent-color-2;
+	}
+	h2 {
+		text-align: center;
+		color: $title-color;
+	}
+	div {
+		border-top: 1px solid $title-color;
+		padding-top: $index;
+		display: flex;
+		justify-content: center;
+	}
 }
-
