--- a/src/pages/HomePage/Home.module.scss
+++ b/src/pages/HomePage/Home.module.scss
@@ -1,110 +1,106 @@
 @import '../../styles/Variables.scss';
 
 .sectionTop {
-  display: flex;
-  flex-direction: row-reverse;
-  position: relative;
+	display: flex;
+	flex-direction: row-reverse;
+	position: relative;
 }
 .glassContainer {
-  background: linear-gradient(
-    to left,
-    rgba(black, 0),
-    rgba(black, 0.6)
-  ), url('../../img/image/fitSelf.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 70svh;
-  display: grid;
-  place-items: center;
-  .glass {
-    max-width: 34.5svw;
-    padding: $index;
-    backdrop-filter: blur(calc($index * 0.4));
-    border-radius: $index;
-    border-right: 1px solid rgba(white, 0.5);
-    border-top: 1px solid rgba(white, 0.5);
-    box-shadow: $box-shadow;
-    text-shadow: $text-shadow;
-    h1 {
-      font-size: calc($index * 2.4);
-      color: $title-color;
-      text-shadow: $text-shadow;
-    }
-  }
+	background: linear-gradient(to left, rgba(black, 0), rgba(black, 0.6)),
+		url('../../../public/img/image/fitSelf.jpg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 70svh;
+	display: grid;
+	place-items: center;
+	.glass {
+		max-width: 34.5svw;
+		padding: $index;
+		backdrop-filter: blur(calc($index * 0.4));
+		border-radius: $index;
+		border-right: 1px solid rgba(white, 0.5);
+		border-top: 1px solid rgba(white, 0.5);
+		box-shadow: $box-shadow;
+		text-shadow: $text-shadow;
+		h1 {
+			font-size: calc($index * 2.4);
+			color: $title-color;
+			text-shadow: $text-shadow;
+		}
+	}
 }
 .SExercise {
-  text-align: center;
-  h1 {
-    font-size: calc($index * 4.5);
-    background: $liner-gradient;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: $text-shadow;
-    pointer-events: none;
-  }
+	text-align: center;
+	h1 {
+		font-size: calc($index * 4.5);
+		background: $liner-gradient;
+		background-clip: text;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		text-shadow: $text-shadow;
+		pointer-events: none;
+	}
 }
 .sectionServises {
-  width: inherit;
-  height: calc(40svh + ($index * 2));
-  display: flex;
-  justify-content: center;
+	width: inherit;
+	height: calc(40svh + ($index * 2));
+	display: flex;
+	justify-content: center;
 }
 .sectionServises__container {
-  width: 65svw;
-  height: inherit;
-  padding: 0 $index;
-  box-shadow: inset 0 0 20px black;
-  border-radius: $index;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  place-items: center;
+	width: 65svw;
+	height: inherit;
+	padding: 0 $index;
+	box-shadow: inset 0 0 20px black;
+	border-radius: $index;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	place-items: center;
 }
 .ServiseCard {
-  width: calc($index * 9);
-  height: calc($index * 11);
-  background: $liner-gradient;
-  border-radius: $index;
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 8px 16px rgba(black, 0.4);
-  transition: $main-transition;
-  &:hover {
-    box-shadow: 0 15px 25px rgba($accent-color-1, 0.5);
-    transform: translateY(-10%);
-  }
+	width: calc($index * 9);
+	height: calc($index * 11);
+	background: $liner-gradient;
+	border-radius: $index;
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0 8px 16px rgba(black, 0.4);
+	transition: $main-transition;
+	&:hover {
+		box-shadow: 0 15px 25px rgba($accent-color-1, 0.5);
+		transform: translateY(-10%);
+	}
 }
 .ServiseCard__content {
-  width: min-content;
-  display: flex;
-  flex-direction: column;
-  gap: calc($index * 1.4);
-  align-items: center;
-  text-align: center;
-  img {
-    width: calc($index * 3.3);
-    height: calc($index * 3.3);
-  }
+	width: min-content;
+	display: flex;
+	flex-direction: column;
+	gap: calc($index * 1.4);
+	align-items: center;
+	text-align: center;
+	img {
+		width: calc($index * 3.3);
+		height: calc($index * 3.3);
+	}
 }
 .sectionContent {
-  width: 90svw;
-  margin-inline: auto;
-  display: flex;
-  justify-content: space-between;
-  padding: calc($index * 3);
-  border-radius: $index;
-  box-shadow: inset 0 0 20px black;
-  article {
-    max-width: 33svw;
-    padding: $index;
-    text-shadow: $text-shadow;
-    border-radius: $index;
-    box-shadow: $box-shadow;
-  }
+	width: 90svw;
+	margin-inline: auto;
+	display: flex;
+	justify-content: space-between;
+	padding: calc($index * 3);
+	border-radius: $index;
+	box-shadow: inset 0 0 20px black;
+	article {
+		max-width: 33svw;
+		padding: $index;
+		text-shadow: $text-shadow;
+		border-radius: $index;
+		box-shadow: $box-shadow;
+	}
 }
-
